@@ -30,7 +30,6 @@
   "footer.next": "Next",
   "meta.comments": "Comments",
   "meta.source": "Source",
-  "search.languages": "",
   "search.placeholder": "Search",
   "search.result.placeholder": "Type to start searching",
   "search.result.none": "No matching documents",
